--- a/style.css
+++ b/style.css
@@ -1,18 +1,14 @@
 body {
- margin: 0;
-  font-family: 'Inter', sans-serif;
+  margin: 0;
   background: white;
   color: #333;
+  font-family: "Cormorant", serif;
 }
   
 a {
   color: inherit;
 }
-  
-h1, h2, .brand, .peinture p, .navbar {
-  font-family: 'Playfair Display', serif;
-}
-  
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -23,6 +19,7 @@ h1, h2, .brand, .peinture p, .navbar {
 
 .navbar a {
   text-decoration: none;
+  font-size: 1.2em;
 }
 
 .titre {
@@ -30,13 +27,13 @@ h1, h2, .brand, .peinture p, .navbar {
 }
   
 .panier {
-  width: 24px;
+  width: 30px;
 }
   
 h1 {
   text-align: center;
   margin: 60px 0;
-  font-size: 2em;
+  font-size: 4em;
   font-weight: normal;
 }
   
@@ -60,11 +57,11 @@ h1 {
   
 .peinture p {
   margin-top: 10px;
-  font-size: 0.95em;
+  font-size: 1.4em;
   color: #444;
 }
   
-.contact {
+.my_class_0058 {
   display: flex;
   padding: 50px 30px;
   gap: 80px;
@@ -79,19 +76,20 @@ h1 {
   
 .contacttexte {
   max-width: 400px;
+  font-size: 1.2em;
 }
   
 .contacttexte h2 {
-  font-size: 1.8em;
+  font-size: 2.4em;
   margin-bottom: 10px;
+  font-weight: normal;
 }
   
 .footer {
   display: flex;
   justify-content: space-between;
   padding: 40px 20px;
-  font-size: 0.9em;
-  color: #777;
+  font-size: 1.2em;
   border-top: 1px solid #eee;
 }
   
