--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ a {
   font-size: 1.2em;
 }
 
+.navbargauche {
+  display: flex;
+  gap: 16px;
+}
+
 .titre {
   font-size: 1.5em;
+  padding-right: 200px;
 }
   
 .panier {
